# amritakalolsavam-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
accounts/: urls.py
accounts/registrations/: registration_user.py
accounts/views/: registrations_view.py  spot_registrations.py  user_details.py
auth/: urls.py
auth/azure/: callback.py  logout.py
auth/token/: refresh_token.py
auth/views/: user_login.py
certificate/: models.py  urls.py
certificate/migrations/: 0001_initial.py  0002_rename_issued_at_certificate_created_at_and_more.py
certificate/views/: upload_certificate.py
config/: settings.py  urls.py
core/: admin.py  models.py  urls.py
core/helper/: get_user_by_id.py
core/migrations/: 0001_initial.py  0002_alter_user_house.py  0003_user_role.py  0004_alter_user_role.py
core/views/: home_view.py  user_auth.py  user_details.py  user_register.py
events/: admin.py  models.py  urls.py  views.py
events/google_sheets/: sheet_sync.py
events/migrations/: 0001_initial.py  0002_event_max_participants_event_min_participants_and_more.py  0003_alter_event_description_alter_event_event_date_and_more.py  0004_event_prefix.py  0005_alter_event_prefix.py
registrations/: admin.py  models.py  urls.py  validater.py  views.py
registrations/helpers/: get_chestnumber.py  get_user_events.py
registrations/migrations/: 0001_initial.py  0002_delete_chestnumber.py  (+3 more)
students/: admin.py  models.py
temp_imports/: 2021_STD_FILE.xlsx
(+6 files in other folders)
